--- a/index.html
+++ b/index.html
@@ -3,4 +3,12 @@
   <head>
     <title>DotChat</title>
   </head>
+  <body>
+    <style>
+      body {
+      background-color: #1f2124;
+      
+      }
+    </style>
+  </body>
 </html>
