--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
   <textarea>
     </textarea>
   </body>
-  <script> </script>
+  <script> ()=> {
+    console.log("Loading.")
+}</script>
 </html>
