--- a/index.html
+++ b/index.html
@@ -7,11 +7,36 @@
     <style>
       body {
       background-color: #1f2124;
+      overflow: hidden;
+      }
+      textarea {
+        overflow: hidden;
+        resize: none;
+        position: relative;
+        width: 1650px;
+        height: 50px;
+        top: 890px;
+        background-color:#2a2e30;
+        border:none;
+      }
       
+      button {
+        position:relative;
+        top: 865px;
+        height: 60px;
+        width: 190px;
+        background-color: #2e2e2e;
+        border: none;
       }
     </style>
     
   <textarea>
     </textarea>
+    <button>
+      Send
+    </button>
+     <script> ()=> {
+    console.log("Loading.")
+}</script>
   </body>
 </html>
