--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
     <button>
       Send
     </button>
-     <script> ()=> {
-    console.log("Loading.")
-}</script>
+    <script src="./script.js"></script>
   </body>
 </html>
